[gd_scene load_steps=16 format=3 uid="uid://bn6smkpg6s5j7"]

[ext_resource type="Texture2D" uid="uid://rycsoe04v3ks" path="res://Assets/Sprites/UI related sprites/Coin/Coin-1.png.png" id="1_ahrpf"]
[ext_resource type="Script" path="res://Assets/UI/Scripts/Popup_settings.gd" id="1_t1wl5"]
[ext_resource type="Texture2D" uid="uid://bvf5yk8qs5jqj" path="res://Assets/Sprites/UI related sprites/puixel-icons/icons/flat/save.png" id="2_s1iif"]
[ext_resource type="Script" uid="uid://cnsm6ivlx8e4v" path="res://Assets/UI/Player_Build_manager.gd" id="3_hrd7a"]
[ext_resource type="Script" uid="uid://bqgw4x0it3st6" path="res://Game/Shop.gd" id="5_45w1l"]
[ext_resource type="Script" uid="uid://ddmxi7aqtsxxu" path="res://Assets/UI/grid_container.gd" id="5_hrd7a"]
[ext_resource type="Script" uid="uid://bxt5br8giet22" path="res://Assets/UI/fight_button.gd" id="7_eabrk"]
[ext_resource type="PackedScene" uid="uid://dapklguvhsdf2" path="res://unit_panel.tscn" id="7_t1wl5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gperi"]
bg_color = Color(0.07058824, 0.30588236, 0.5372549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2x8r"]
bg_color = Color(0, 0.6039216, 0.85882354, 0.5882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1iif"]
bg_color = Color(0.8007565, 0.49518055, 0.5903154, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rs5d1"]
bg_color = Color(0.34901962, 0.4117647, 0.5294118, 0.4745098)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.54509807, 0.60784316, 0.7058824, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_33jvu"]
bg_color = Color(0.07058824, 0.30588236, 0.5372549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14f0d"]
bg_color = Color(0.1539, 0.17324999, 0.27, 0.5882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahrpf"]
bg_color = Color(0.96862745, 0.47058824, 0.13725491, 0.5882353)

[node name="Control2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupQuitMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
z_index = 10
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/PopupQuitMenu"]
visible = false

[node name="Padding" type="Panel" parent="MarginContainer/PopupQuitMenu/CanvasLayer"]
custom_minimum_size = Vector2(400, 400)
offset_left = 376.0
offset_top = 124.0
offset_right = 776.0
offset_bottom = 524.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gperi")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PopupQuitMenu/CanvasLayer/Padding"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabel" type="Label" parent="MarginContainer/PopupQuitMenu/CanvasLayer/Padding/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 3

[node name="SettingsLabel2" type="Label" parent="MarginContainer/PopupQuitMenu/CanvasLayer/Padding/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 15
text = "(progress is saved)"
horizontal_alignment = 1
vertical_alignment = 3

[node name="NoButton" type="Button" parent="MarginContainer/PopupQuitMenu/CanvasLayer/Padding/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(170, 65)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_k2x8r")
text = "Close Settings"

[node name="YesButton" type="Button" parent="MarginContainer/PopupQuitMenu/CanvasLayer/Padding/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(170, 65)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_k2x8r")
text = "Return to main menu"

[node name="TopBar" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_left = NodePath("HBoxContainer2")
focus_neighbor_right = NodePath("HBoxContainer")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 2

[node name="QuitButton" type="Button" parent="MarginContainer/TopBar/HBoxContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_k2x8r")
text = "Settings"
script = ExtResource("1_t1wl5")
popup_path = NodePath("../../../PopupQuitMenu")
YesButton_path = NodePath("../../../PopupQuitMenu/CanvasLayer/Padding/VBoxContainer/YesButton")
NoButton_path = NodePath("../../../PopupQuitMenu/CanvasLayer/Padding/VBoxContainer/NoButton")
canvaslayer_path = NodePath("../../../PopupQuitMenu/CanvasLayer")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/TopBar/HBoxContainer"]
position = Vector2(-19.999996, 24)
scale = Vector2(0.05000001, 0.05)
texture = ExtResource("1_ahrpf")
offset = Vector2(-200, 0)

[node name="GoldLabel" type="Label" parent="MarginContainer/TopBar/HBoxContainer"]
clip_contents = true
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 30
text = "50"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Padding" type="Panel" parent="MarginContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s1iif")

[node name="CenterContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RoundsLabel" type="Label" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Round 1"
horizontal_alignment = 1
vertical_alignment = 3

[node name="Padding" type="Panel" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s1iif")

[node name="Board" type="GridContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 3
script = ExtResource("3_hrd7a")

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="Panel2" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="Panel3" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="Panel4" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="Panel5" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="Panel6" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="Panel7" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="Panel8" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="Panel9" type="Panel" parent="MarginContainer/CenterContainer/Board" groups=["drop_zone"]]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rs5d1")

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/RightPanel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="RoundsLabel" type="Label" parent="MarginContainer/RightPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0.3647059, 0.88235295, 0.9764706, 0.49411765)
theme_override_font_sizes/font_size = 50
text = ">"
vertical_alignment = 1

[node name="SavingIconContainer" type="VBoxContainer" parent="MarginContainer/RightPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6

[node name="SavingLabel" type="Label" parent="MarginContainer/RightPanel/HBoxContainer/SavingIconContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Saving..."

[node name="TextureRect" type="TextureRect" parent="MarginContainer/RightPanel/HBoxContainer/SavingIconContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_s1iif")

[node name="Padding" type="Panel" parent="MarginContainer/RightPanel/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s1iif")

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 8

[node name="ShopFrame" type="Panel" parent="MarginContainer/BottomBar"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_33jvu")
script = ExtResource("5_45w1l")

[node name="Panel" type="Panel" parent="MarginContainer/BottomBar/ShopFrame"]
custom_minimum_size = Vector2(380, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -40.0
offset_right = 190.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_14f0d")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/BottomBar/ShopFrame"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -37.5
offset_right = 156.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme_override_constants/h_separation = 20
columns = 4
script = ExtResource("5_hrd7a")

[node name="UnitPanel" parent="MarginContainer/BottomBar/ShopFrame/GridContainer" instance=ExtResource("7_t1wl5")]
layout_mode = 2

[node name="UnitPanel2" parent="MarginContainer/BottomBar/ShopFrame/GridContainer" instance=ExtResource("7_t1wl5")]
layout_mode = 2

[node name="UnitPanel3" parent="MarginContainer/BottomBar/ShopFrame/GridContainer" instance=ExtResource("7_t1wl5")]
layout_mode = 2

[node name="UnitPanel4" parent="MarginContainer/BottomBar/ShopFrame/GridContainer" instance=ExtResource("7_t1wl5")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/BottomBar"]
layout_mode = 2
alignment = 1

[node name="SavingLabel" type="Label" parent="MarginContainer/BottomBar/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_styles/normal = SubResource("StyleBoxFlat_ahrpf")
text = "Drop a unit to Sell"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RerollButton" type="Button" parent="MarginContainer/BottomBar/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_k2x8r")
text = "Reroll"

[node name="FightButton" type="Button" parent="MarginContainer/BottomBar"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_k2x8r")
text = "Fight"
script = ExtResource("7_eabrk")

[connection signal="pressed" from="MarginContainer/BottomBar/VBoxContainer/RerollButton" to="MarginContainer/BottomBar/ShopFrame/GridContainer" method="_on_reroll_button_pressed"]
